Revert "Merge branch 'main' of https://github.com/OleksandrVlasenko/drink_master_backend"
This reverts commit 7d5ef2fe48b1c2ba4e04894a3411e4ec02b213af, reversing
changes made to b2db078748dcdf63e8efafa7e68afac3e02c274a.
