# models/cocktail.js
@@ -1,21 +1,26 @@
 import Joi from "joi";
 import { Schema, model } from "mongoose";
 import { handleMongooseError } from "../helpers/index.js";
-import { ingredientSchema } from "../models/ingredient.js";
 
 const cocktailSchema = Schema(
 	{
 		drink: {
 			type: String,
 			required: [true, "Set name of Cocktail"],
-			unique: [true, "Recipe with this name is already exists"],
+			unique: true,
 		},
 		description: { type: String, default: "" },
 		category: { type: String, required: true },
 		glass: { type: String, required: true },
 		instructions: [{ type: String, default: "" }],
 		drinkThumb: { type: String, required: false, default: "" },
-		ingredients: [ingredientSchema],
+		ingredients: [
+			{
+				title: { type: String, required: true },
+				ingredientThumb: { type: String, default: "" },
+				measure: { type: String, required: true },
+			},
+		],
 		users: { type: Array, default: [] },
 		userArrayLenght: { type: Number, default: 0 },
 		owner: {
@@ -24,7 +29,7 @@ const cocktailSchema = Schema(
 			required: true,
 		},
 	},
-	{ versionKey: false },
+	{ versionKey: false }
 );
 
 cocktailSchema.post("save", handleMongooseError);
@@ -34,16 +39,18 @@ const userRecipeAddSchemaJoi = Joi.object({
 	description: Joi.string(),
 	category: Joi.string().required(),
 	glass: Joi.string().required(),
-	instructions: Joi.array().items(Joi.string()),
+	instructions: Joi.string(),
+	drinkThumb: Joi.string().allow("").optional(),
 	ingredients: Joi.array()
 		.items(
 			Joi.object({
-				title: Joi.string().required(),
-				measure: Joi.string().required(),
-			}),
+				_id: Joi.string(),
+				title: Joi.string(),
+				ingredientThumb: Joi.string(),
+				measure: Joi.string(),
+			})
 		)
 		.required(),
-	imageOfRecipe: Joi.string().allow("").optional(),
 });
 
 const Cocktail = model("cocktail", cocktailSchema);
