# routes/api/myRecipes-router.js
@@ -1,11 +1,6 @@
 import express from "express";
 import { myRecipesController } from "../../controllers/myRecipes-controller/index.js";
-import {
-	validateBody,
-	authenticate,
-	isEmptyBody,
-	upload,
-} from "../../middlewares/index.js";
+import { validateBody, authenticate } from "../../middlewares/index.js";
 import { userRecipeAddSchemaJoi } from "../../models/cocktail.js";
 
 const router = express.Router();
@@ -13,10 +8,8 @@ const router = express.Router();
 router.post(
 	"/",
 	authenticate,
-	upload.single("imageOfRecipe"),
-	isEmptyBody,
 	validateBody(userRecipeAddSchemaJoi),
-	myRecipesController.add,
+	myRecipesController.add
 );
 
 router.delete("/:id", authenticate, myRecipesController.removeById);
